[LFC] FormattingContext::Geometry::inFlowPositionedPositionOffset should not read containing block's width https://bugs.webkit.org/show_bug.cgi?id=201797 <rdar://problem/55366244>

Reviewed by Antti Koivisto.

This is in preparation for using constraint values instead of querying the display tree for containing block geometry information.
See webkit.org/b/201795

* layout/FormattingContext.h:
* layout/FormattingContextGeometry.cpp:
(WebCore::Layout::FormattingContext::Geometry::inFlowPositionedPositionOffset const):
* layout/blockformatting/BlockFormattingContext.cpp:
(WebCore::Layout::BlockFormattingContext::placeInFlowPositionedChildren):
* layout/inlineformatting/InlineFormattingContextLineLayout.cpp:
(WebCore::Layout::InlineFormattingContext::InlineLayout::createDisplayRuns const):


Canonical link: https://commits.webkit.org/215433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249879 268f45cc-cd09-0410-ab3c-d52691b4dbfc